UI changes: (details) - Set ship position updates - Ship selection buttons + focus - Whos turn + who you are - Selecting a ship no longer jumps to carrier - Instructions in placement UI

--- a/scss/battlecruisers/css/index.scss
+++ b/scss/battlecruisers/css/index.scss
@@ -4,6 +4,9 @@ body {
     font-family: 'Quantico';
 }
 
+hr {
+    border-bottom: 1px solid rgba(255, 255, 255, .14);
+}
 
 // Navbar
 // ----------------------
@@ -101,12 +104,62 @@ nav {
 }
 
 
+// UI container
+#ui {
+    flex-grow: 0.9;
+    user-select: none;
+}
+
+#you-are {
+    font-size: 18px;
+    line-height: 40px;
+    vertical-align: top;
+
+    background-color: #222;
+    color:white;
+
+    img {
+        height: 40px;
+        vertical-align: top;
+        margin-right: 15px;
+    }
+}
+
+#turn {
+    margin: 10px 0;
+    background-color: #111;
+    padding: 5px;
+}
+
 #ship-placement-buttons {
     button {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        max-width: 500px;
         margin: 5px;
+        padding: 7px;
+        text-align: left;
+        display: block;
+
+        color: #bbb;
+        font-family: 'Quantico';
+        background-color: black;
+        outline: none;
+        border: 1px solid #bbb;
+        transition: color 0.2s, border-color 0.2s, background-color 0.2s;
+
+        &:disabled {
+            opacity: 0.3;
+            cursor: not-allowed !important;
+        }
+
+        &:hover,
+        &:focus,
+        &.focused {
+            cursor: pointer;
+            background-color: white;
+            border-color: white;
+            color: black;
+        }
     }
 }
 
